# smart-sensor-network

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/common/: ProtocolTypes.hpp  SensorTypesString.hpp  TimeUtils.hpp
include/gateway/: Gateway.hpp
include/monitor/: ILogger.hpp  Logger.hpp  Monitor.hpp
include/network/: IUdpSender.hpp  PacketSerializer.hpp  TcpServer.hpp  TelemetrySerializer.hpp  UdpReceiver.hpp  UdpSender.hpp
include/sensor/: BatterySensor.hpp  MotionSensor.h  MotionSensor.hpp  PressureSensor.hpp  Sensor.hpp  SensorNode.hpp  TemperatureSensor.hpp
include/ui/: ConsoleRenderer.hpp
src/common/: SensorTypesString.cpp
src/gateway/: Gateway.cpp
src/monitor/: Logger.cpp  Monitor.cpp
src/network/: PacketSerializer.cpp  TcpServer.cpp  TelemetrySerializer.cpp  UdpReceiver.cpp  UdpSender.cpp
src/sensor/: BatterySensor.cpp  MotionSensor.cpp  PressureSensor.cpp  Sensor.cpp  SensorNode.cpp  TemperatureSensor.cpp
src/ui/: ConsoleRenderer.cpp
tests/: BatterySensorTests.cpp  GatewayTests.cpp  MotionSensorTests.cpp  PressureSensorTests.cpp  SensorNodeTests.cpp  TcpServerTests.cpp  TemperatureSensorTests.cpp  UdpReceiverTests.cpp
tests/fakes/: FakeLogger.hpp  FakeUdpSender.hpp
